# sgtk

./: .gitignore  pyproject.toml
builds/: sgtk-0.22.0-py3-none-any.whl
python/sgtk/: __init__.py
python/tank/: __init__.py  api.py  context.py  hook.py  log.py  path_cache.py  pipelineconfig.py  pipelineconfig_factory.py  template.py  template_includes.py  template_path_parser.py  templatekey.py
python/tank/authentication/: app_session_launcher.py  console_authentication.py  interactive_authentication.py  login_dialog.py  session_cache.py  shotgun_wrapper.py  user.py  user_impl.py
python/tank/bootstrap/: async_bootstrap.py  cached_configuration.py  configuration_writer.py  import_handler.py  installed_configuration.py  manager.py  resolver.py
python/tank/commands/: action_base.py  app_info.py  clone_configuration.py  console_utils.py  core_localize.py  core_upgrade.py  get_entity_commands.py  install.py  interaction.py  misc.py  move_pc.py  path_cache.py  pc_overview.py  push_pc.py  setup_project.py  setup_project_core.py  setup_project_params.py  setup_project_wizard.py  switch.py  tank_command.py  unregister_folders.py  update.py  validate_config.py
python/tank/descriptor/: descriptor_bundle.py
python/tank/folder/: configuration.py  folder_io.py  operations.py
python/tank/platform/: bundle.py  engine.py  engine_logging.py  environment.py  environment_includes.py  validation.py  (+1 more)
tests/authentication_tests/: test_app_session_launcher.py
tests/core_tests/: test_path_cache.py
tests/descriptor_tests/: test_github.py
tests/util_tests/: test_metrics.py
(+79 files in other folders)
