[tool.poetry]
name = "sgtk"
version = "0.22.0"
description = "SGTK, but it works."
authors = ["mgbvox <mgbvox@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "sgtk", from = "python" },
    { include = "tank", from = "python" },
    { include = "tank_vendor", from = "python" }
]

[tool.poetry.dependencies]
python = "^3.8"
looseversion = "^1.3.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.3.6"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
